@@ -5,6 +5,8 @@ Release 1.0.8
 * script circus-artefacts now saves everything in ms, to be consistent
 * fix a bug in the neuralynx wrapper, causing last chunk to be ignored
 * add the option, in circus-multi to export everything for phy
+* optimization for clusters, to secure the .params file during overwritting
+* fix a bug in the preview mode with the gain
 
 =============
 Release 1.0.7
